--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
+    "firebase": "^9.0.1",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
   },
