--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "daisyui": "^1.14.0",
     "firebase": "^9.0.1",
     "vue": "^3.2.6",
