--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^7.17.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.5",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.11",
+    "tailwindcss": "^3.0.18",
     "vite": "^2.5.1"
   }
 }
